--- a/index.html
+++ b/index.html
@@ -11,10 +11,121 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <!-- styles -->
-    <title>Document</title>
+    <title>Hello World</title>
   </head>
   <body>
     <!-- body content start -->
+
+    <!-- header start -->
+      <header class="hw-header">
+          <div class="content-wrapper">
+              <div class="hw-header__outer">
+                  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                    <div class="container-fluid">
+                      <a class="hw-header__logo" href="#"><img src="../assets/images/logo.svg" alt=""></a>
+                      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                      </button>
+                      <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
+                          <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Course</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Info</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Testimonial</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#" tabindex="-1">Categories</a>
+                          </li>
+                        </ul>
+                      </div>
+                    </div>
+                  </nav>
+              </div>
+          </div>
+      </header>
+    <!-- header end -->
+
+    <!-- hero start -->
+      <section class="hw-hero" style="background-image: url(../assets/images/main-bg.png);">
+        <div class="content-wrapper">
+            <div class="hw-hero__outer">
+                <div class="hw-heading">
+                    <h1 class="hw-heading__txt">Learn graphics design for life</h1>
+                    <div class="hw-heading__img"><img src="../assets/images/head-icon.png" alt=""></div>
+                </div>
+
+                <div class="hw-hero__outer-desc">
+                    <p>Stay Informed, Stay Ahead: Unveiling the Future of Technology, Gadgets, and Innovation</p>
+                    <p>Your Gateway to the Digital Universe - Where Innovation Meets Insight</p>
+                </div>
+
+                <div class="hw-studnts-sec">
+                    <div class="hw-studnts-sec__left">
+                        <h3 class="hw-studnts-sec__left-num">5.1 K</h3>
+                        <p class="hw-studnts-sec__left-txt">
+                            Students All Over World
+                        </p>
+                    </div>
+            
+                    <div class="hw-studnts-sec__right">
+                        <img src="../assets/images/students-img.png" alt="">
+                    </div>
+                </div>
+
+                <div class="hw-hero__outer-cta">
+                    <button class="hw-btn">Book Your Seat</button>
+
+                    <button class="hw-btn hw-btn--play">
+                      <div class="hw-btn--play__icn"><img src="../assets/images/btn-icon.svg" alt=""></div>
+                      <p class="hw-btn--play__txt">See Journey</p>
+                    </button>
+                </div>
+            </div>
+        </div>
+      </section>
+    <!-- hero end -->
+
+    <!-- sidebar start -->
+    <div class="hw-sidebar" style="background-image: url(../assets/images/sidebar-bg.png);">
+      <div class="hw-sidebar__img hw-sidebar__img--crcl"><img src="../assets/images/sidebar-img-1.png" alt=""></div>
+      <div class="hw-sidebar__img"><img src="../assets/images/sidebar-img-2.png" alt=""></div>
+      <div class="hw-sidebar__img hw-sidebar__img--lft-rd"><img src="../assets/images/sidebar-img-3.png" alt=""></div>
+      <div class="hw-sidebar__img hw-sidebar__img--rgt-rd"><img src="../assets/images/sidebar-img-4.png" alt=""></div>
+      <div class="hw-sidebar__img"><img src="../assets/images/sidebar-img-5.png" alt=""></div>
+      <div class="hw-sidebar__img"><img src="../assets/images/sidebar-img-6.png" alt=""></div>
+    </div>
+  <!-- sidebar end -->
+
+    <!-- footer start -->
+      <footer class="hw-footer">
+        <div class="content-wrapper">
+            <div class="hw-footer__outer">
+                <div class="hw-footer__outer-wrap">
+                  <!-- tiles -->
+                    <div class="hw-success-tile">
+                        <h3 class="hw-success-tile__num">6409</h3>
+                        <p class="hw-success-tile__txt">Succes Story</p>
+                    </div>
+
+                    <div class="hw-success-tile">
+                        <h3 class="hw-success-tile__num">124</h3>
+                        <p class="hw-success-tile__txt">Expert Instructor</p>
+                    </div>
+
+                    <div class="hw-success-tile">
+                        <h3 class="hw-success-tile__num">54.749</h3>
+                        <p class="hw-success-tile__txt">Hours Tutored</p>
+                    </div>
+                    <!-- tiles  -->
+                </div>
+            </div>
+        </div>
+      </footer>
+    <!-- footer end -->
     <!-- body content end -->
 
     <!-- scripts -->
