--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <div class="hw-header__outer">
                   <nav class="navbar navbar-expand-lg navbar-light bg-light">
                     <div class="container-fluid">
-                      <a class="hw-header__logo" href="#"><img src="../assets/images/logo.svg" alt=""></a>
+                      <a class="hw-header__logo" href="#"><img src="./assets/images/logo.svg" alt=""></a>
                       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
@@ -50,12 +50,12 @@
     <!-- header end -->
 
     <!-- hero start -->
-      <section class="hw-hero" style="background-image: url(../assets/images/main-bg.png);">
+      <section class="hw-hero" style="background-image: url(./assets/images/main-bg.png);">
         <div class="content-wrapper">
             <div class="hw-hero__outer">
                 <div class="hw-heading">
                     <h1 class="hw-heading__txt">Learn graphics design for life</h1>
-                    <div class="hw-heading__img"><img src="../assets/images/head-icon.png" alt=""></div>
+                    <div class="hw-heading__img"><img src="./assets/images/head-icon.png" alt=""></div>
                 </div>
 
                 <div class="hw-hero__outer-desc">
@@ -72,7 +72,7 @@
                     </div>
             
                     <div class="hw-studnts-sec__right">
-                        <img src="../assets/images/students-img.png" alt="">
+                        <img src="./assets/images/students-img.png" alt="">
                     </div>
                 </div>
 
@@ -80,7 +80,7 @@
                     <button class="hw-btn">Book Your Seat</button>
 
                     <button class="hw-btn hw-btn--play">
-                      <div class="hw-btn--play__icn"><img src="../assets/images/btn-icon.svg" alt=""></div>
+                      <div class="hw-btn--play__icn"><img src="./assets/images/btn-icon.svg" alt=""></div>
                       <p class="hw-btn--play__txt">See Journey</p>
                     </button>
                 </div>
@@ -90,13 +90,13 @@
     <!-- hero end -->
 
     <!-- sidebar start -->
-    <div class="hw-sidebar" style="background-image: url(../assets/images/sidebar-bg.png);">
-      <div class="hw-sidebar__img hw-sidebar__img--crcl"><img src="../assets/images/sidebar-img-1.png" alt=""></div>
-      <div class="hw-sidebar__img"><img src="../assets/images/sidebar-img-2.png" alt=""></div>
-      <div class="hw-sidebar__img hw-sidebar__img--lft-rd"><img src="../assets/images/sidebar-img-3.png" alt=""></div>
-      <div class="hw-sidebar__img hw-sidebar__img--rgt-rd"><img src="../assets/images/sidebar-img-4.png" alt=""></div>
-      <div class="hw-sidebar__img"><img src="../assets/images/sidebar-img-5.png" alt=""></div>
-      <div class="hw-sidebar__img"><img src="../assets/images/sidebar-img-6.png" alt=""></div>
+    <div class="hw-sidebar" style="background-image: url(./assets/images/sidebar-bg.png);">
+      <div class="hw-sidebar__img hw-sidebar__img--crcl"><img src="./assets/images/sidebar-img-1.png" alt=""></div>
+      <div class="hw-sidebar__img"><img src="./assets/images/sidebar-img-2.png" alt=""></div>
+      <div class="hw-sidebar__img hw-sidebar__img--lft-rd"><img src="./assets/images/sidebar-img-3.png" alt=""></div>
+      <div class="hw-sidebar__img hw-sidebar__img--rgt-rd"><img src="./assets/images/sidebar-img-4.png" alt=""></div>
+      <div class="hw-sidebar__img"><img src="./assets/images/sidebar-img-5.png" alt=""></div>
+      <div class="hw-sidebar__img"><img src="./assets/images/sidebar-img-6.png" alt=""></div>
     </div>
   <!-- sidebar end -->
 
